--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     document.addEventListener("keyup", e => keys[e.key] = false);
 
     const carImage = new Image();
-    carImage.src = "4c037f9eebcc9e5b66863023999b11ae.jpg"; // make sure this file exists
+    carImage.src = "5a5890061fab6830de53c10a9817d617.png"; // make sure this file exists
 
     const car = {
       x: canvas.width / 2,
