--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     carImage.src = "5a5890061fab6830de53c10a9817d617.png"; // make sure this file exists
 
     const car = {
-      x: canvas.width / 2,
-      y: canvas.height - 120,
+      x: canvas.width,
+      y: canvas.height,
       width: 60, // Increased size
       height: 90, // Increased size
       velocity: 0,
